# python-eduvpn-client

./: .dockerignore  .gitignore  .travis.yml  CHANGES.md  LICENSE.spdx  MANIFEST.in  Makefile  README.md  Vagrantfile  eduvpn-client.spec  eduvpn.spec  install.sh  make_release.sh  mypy.ini  oauth2.ipynb  oauth2.py  prototyping.ipynb  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  setup_letsconnect.py  test.py  vagrant_provision.sh
.forgejo/workflows/: test.yml
.github/ISSUE_TEMPLATE/: bug_report.md  new_feature.md
.github/workflows/: containers.yml  osx.yml  test.yml
artwork/: logo eduVPN normaal.psd  secure_access.ai  secure_internet.ai  surfnet.psd
contrib/: eduvpn-client.desktop
data/: eduvpn-client.desktop  eduvpn.glade  eduvpn.ui
doc/: API.rst  Makefile  build.sh  conf.py  developer.rst  flow.dia  index.rst  installation.rst  introduction.rst  knownissues.rst  mkdocs.yml  release.rst  requirements.txt  rpm.notes  updating.rst  upload.sh  usage.rst
doc/eduvpn_theme/: main.html
doc/md/: index.md  installation.md  prerelease.md  support.md  updating.md  usage.md
docker/: Dockerfile.centos_7_py2  Dockerfile.centos_7_rpm  Dockerfile.debian_jessie_py2  Dockerfile.debian_jessie_py3  Dockerfile.fedora_25_py2  Dockerfile.fedora_25_py3  Dockerfile.fedora_25_rpm  Dockerfile.fedora_26_py2  Dockerfile.fedora_26_py3  Dockerfile.fedora_26_rpm  Dockerfile.fedora_27_py2  Dockerfile.fedora_27_py3  Dockerfile.fedora_27_rpm  Dockerfile.fedora_28_py2  Dockerfile.fedora_28_py3  Dockerfile.fedora_28_rpm  Dockerfile.ubuntu_artful_py2  Dockerfile.ubuntu_artful_py3  Dockerfile.ubuntu_bionic_py2  Dockerfile.ubuntu_bionic_py3  Dockerfile.ubuntu_bionic_py3_mypy  Dockerfile.ubuntu_bionic_py3_pep8  Dockerfile.ubuntu_xenial_doc  Dockerfile.ubuntu_xenial_py2  Dockerfile.ubuntu_xenial_py3  Dockerfile.ubuntu_zesty_py2  Dockerfile.ubuntu_zesty_py3  Dockerfile.ubuntu_zesty_py3_pep8  doc.docker  docker-apt-install  docker-apt-install-common  docker-dnf-install-common  dockerfile.ubuntu.zesty_py2  dockerfile.ubuntu.zesty_py3  dockerfile.ubuntu_zesty_py2  dockerfile.ubuntu_zesty_py3  eduvpn_centos_7_py2.docker  eduvpn_centos_7_rpm.docker  eduvpn_centos_8.py3.docker  eduvpn_centos_8_py2.docker  (+54 more)
eduvpn/: __init__.py  __init__.pyi  __main__.py  actions.py  app.py  brand.py  brand.pyi  cli.py  config.py  config.pyi  connection.py  crypto.py  crypto.pyi  discovery.py  example.py  exceptions.py  exceptions.pyi  i18n.py  images.py  images.pyi  interface.py  io.py  io.pyi  keyring.py  local_io.py  local_oauth2.py  main.py  main.pyi  manager.py  manager.pyi  menu.py  metadata.py  metadata.pyi  network.py  nm.py  notify.py  notify.pyi  oauth2.py  oauth2.pyi  openvpn.py  (+22 more)
eduvpn/actions/: __init__.py  activate.py  activate.pyi  add.py  add.pyi  delete.py  delete.pyi  select.py  select.pyi  switch.py  switch.pyi  vpn_status.py  vpn_status.pyi
eduvpn/eduvpn/: __main__.py  variant.py
eduvpn/interface/: __init__.py  error.py  event.py  state.py  transition.py  utils.py
eduvpn/managers/: __init__.py  nm.py  other.py
eduvpn/notify/: __init__.py  dbus.py  osx.py
eduvpn/oauth2/: __init__.py  challenge.py  http.py
eduvpn/providers/: nm.py  other.py
eduvpn/steps/: __init__.py  browser.py  browser.pyi  custom_url.py  custom_url.pyi  fetching.py  fetching.pyi  (+24 more)
eduvpn_base/: app.py  cli.py  config.py  connection.py  i18n.py  nm.py  notify.py  ovpn.py  server.py  settings.py  storage.py  utils.py  variants.py
eduvpngui/: __main__.py  backend.py  ui.py
keys/: app+linux+dev@eduvpn.org.asc  app+linux@eduvpn.org.asc  minisign-CA9409316AC93C07.pub
letsconnect/: pyproject.toml
letsconnect/letsconnect/: __main__.py  variant.py
notebooks/: demo_enroll.ipynb  demo_enroll_wireguard.ipynb  full_flow.ipynb  get_nm_settings.ipynb  monitor_status_change.ipynb  new_flow.ipynb  new_new_flow.ipynb  os.detection.ipynb  requirements.txt  secure_dns_spoofing.ipynb  surfnet_nl_enroll.ipynb
rpm/: centos7.spec  eduvpn-client.spec  eduvpn_centos7.spec  eduvpn_centos8.spec  eduvpn_fedora.spec  lets_connect_centos7.spec  lets_connect_centos8.spec  lets_connect_fedora.spec
scripts/: eduvpn-client  list_connections.py  ui.py
tests/: __init__.py  example.ovpn  mock_config.py  online.py  state_utils.py  test_actions.py  test_cli.py  test_connect.py  test_crypto.py  test_flow.py  test_i18n.py  test_io.py  test_local_io.py  test_local_oauth2.py  test_main.py  test_manager.py  test_menu.py  test_metadata.py  test_nm.py  test_notify.py  test_oauth.py  test_oauth2.py  test_online.py  test_openvpn.py  test_ovpn.py  test_providers_nm.py  test_providers_other.py  test_remote.py  test_state_machine.py  test_stats.py  test_steps.py  test_storage.py  test_ui.py  test_util.py  util.py  utils.py  variant.py
(+82 files in other folders)
