[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eduvpn_client"
version = "4.1.99.0"
description = "eduVPN client"
authors = [
    {name = "Jeroen Wijenbergh", email = "jeroen.wijenbergh@geant.org"},
]
dependencies = [
    "eduvpn_common==1.1.99.0",
    "pygobject",
]
requires-python = ">=3.6"
readme = "README.md"
license = {text = "GPL3"}
keywords = ["vpn openvpn networking security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: System :: Networking",
    "Topic :: System :: Operating System Kernels :: Linux",
]

[project.urls]
Homepage = "https://github.com/eduvpn/python-eduvpn-client"

[project.optional-dependencies]
lint = [
    "ruff",
]
mypy = [
    "mypy",
    "pygobject-stubs",
    "types-setuptools",
]
test = [
    "pytest",
]

[project.scripts]
eduvpn-cli = "eduvpn.cli:eduvpn"
letsconnect-cli = "eduvpn.cli:letsconnect"

[project.gui-scripts]
eduvpn-gui = "eduvpn.ui.__main__:eduvpn"
letsconnect-gui = "eduvpn.ui.__main__:letsconnect"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    # isort
    "I",
]

[tool.ruff.lint.isort]
case-sensitive = true
