[metadata]
name = eduvpn_client
version = 4.3.0
author = Jeroen Wijenbergh
author_email = jeroen.wijenbergh@geant.org
description = eduVPN client for Linux
long_description = file: README.md
url = https://github.com/eduvpn/python-eduvpn-client
license = GPL3+
license-files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications
    Environment :: X11 Applications :: GTK
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Networking
    Topic :: System :: Operating System Kernels :: Linux

[options]
packages = eduvpn
python_requires = >= 3.6
install_requires =
    eduvpn_common >= 2.0.0,< 3.0.0
    pygobject

[options.package_data]
eduvpn = data/**/*

[options.entry_points]
console_scripts =
    eduvpn-cli = eduvpn.cli:eduvpn
    letsconnect-cli = eduvpn.cli:letsconnect
gui_scripts =
    eduvpn-gui = eduvpn.ui.__main__:eduvpn
    letsconnect-gui = eduvpn.ui.__main__:letsconnect

[options.extras_require]
lint = ruff
mypy =
    mypy
    pygobject-stubs
    types-setuptools
test = pytest