[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "letsconnect_client"
version = "4.1.99.0"
description = "Let's Connect! for Linux"
authors = [
    {name = "Jeroen Wijenbergh", email = "jeroen.wijenbergh@geant.org"},
]
dependencies = [
    "eduvpn_base==4.1.99.0",
]
requires-python = ">=3.6"
readme = "../README.md"
license = {text = "GPL3"}
keywords = ["vpn openvpn networking security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: System :: Networking",
    "Topic :: System :: Operating System Kernels :: Linux",
]

[project.urls]
Homepage = "https://github.com/eduvpn/python-eduvpn-client"

[project.scripts]
eduvpn-cli = "letsconnect.__main__:cli"

[project.gui-scripts]
eduvpn-gui = "letsconnect.__main__:gui"
